--- a/src/package.json
+++ b/src/package.json
@@ -14,7 +14,7 @@
     "start": "node ./bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "ralgoo",
   "license": "MIT",
   "description": ""
 }
