--- a/app/package.json
+++ b/app/package.json
@@ -6,13 +6,16 @@
     "jsearch": "bin/www.js"
   },
   "dependencies": {
+    "app-root-path": "^3.1.0",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mariadb": "^3.0.1",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "winston": "^3.8.1"
   },
   "scripts": {
     "start": "nodemon ./bin/www.js",
